<resources>
    <string name="app_name">LayoutsDemo</string>
    <string name="to">TO</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="startService">START SERVICE</string>
    <string name="pauseService">PAUSE SERVICE</string>
    <string name="stopService">STOP SERVICE</string>
    <string name="btEnviar">Enviar</string>
</resources>
